Fix SQLAlchemy version and prepare for Render

--- a/.env
+++ b/.env
@@ -6,12 +6,12 @@
 EMAIL_PROVIDER=yahoo
 
 # إعدادات البريد الإلكتروني للمرسل (لجميع الإشعارات)
-SENDER_EMAIL=velio.c@yahoo.com
+SENDER_EMAIL=velio.contact@yahoo.com
 SENDER_PASSWORD=rhpctpddhclirxqp
 
 # البريد الإلكتروني لاستقبال رسائل التواصل والطلبات
 # نفس البريد المرسل (سيستقبل جميع الإشعارات)
-RECEIVER_EMAIL=velio.c@yahoo.com
+RECEIVER_EMAIL=velio.contact@yahoo.com
 
 # إعدادات SMTP (سيتم تعيينها تلقائياً حسب EMAIL_PROVIDER)
 # SMTP_SERVER=smtp.mail.yahoo.com
