--- a/.env
+++ b/.env
@@ -1,24 +1,23 @@
 # إعدادات البريد الإلكتروني لموقع Velio Store
-# تم إعدادها تلقائياً بواسطة fix_contact_form_unified.py
-# نفس البريد الإلكتروني للطلبات ونموذج "اتصل بنا"
+# تم ربط نفس الحساب للطلبات والتواصل
 
-# نوع مزود البريد الإلكتروني (yahoo, gmail, outlook)
+# نوع مزود البريد الإلكتروني
 EMAIL_PROVIDER=yahoo
 
-# إعدادات البريد الإلكتروني للمرسل (لجميع الإشعارات)
+# إعدادات البريد الإلكتروني للمرسل (نفس الحساب للطلبات والتواصل)
 SENDER_EMAIL=velio.contact@yahoo.com
 SENDER_PASSWORD=rhpctpddhclirxqp
 
 # البريد الإلكتروني لاستقبال رسائل التواصل والطلبات
-# نفس البريد المرسل (سيستقبل جميع الإشعارات)
+# إذا لم يتم تحديده، سيستخدم نفس SENDER_EMAIL
 RECEIVER_EMAIL=velio.contact@yahoo.com
 
-# إعدادات SMTP (سيتم تعيينها تلقائياً حسب EMAIL_PROVIDER)
-# SMTP_SERVER=smtp.mail.yahoo.com
-# SMTP_PORT=587
+# إعدادات SMTP
+SMTP_SERVER=smtp.mail.yahoo.com
+SMTP_PORT=587
 
 # مفتاح الأمان للتطبيق
-SECRET_KEY=velio-store-secret-key-2024
+SECRET_KEY=velio-store-secret-key-456075815a06f036
 
 # إعدادات قاعدة البيانات
 DATABASE_URL=sqlite:///instance/products.db
