Fix SQLAlchemy version and prepare for Render

--- a/.env
+++ b/.env
@@ -1,23 +1,12 @@
 # إعدادات البريد الإلكتروني لموقع Velio Store
-# تم ربط نفس الحساب للطلبات والتواصل
-
-# نوع مزود البريد الإلكتروني
 EMAIL_PROVIDER=yahoo
-
-# إعدادات البريد الإلكتروني للمرسل (نفس الحساب للطلبات والتواصل)
 SENDER_EMAIL=velio.contact@yahoo.com
 SENDER_PASSWORD=rhpctpddhclirxqp
-
-# البريد الإلكتروني لاستقبال رسائل التواصل والطلبات
-# إذا لم يتم تحديده، سيستخدم نفس SENDER_EMAIL
-RECEIVER_EMAIL=velio.contact@yahoo.com
+RECEIVER_EMAIL=?
 
 # إعدادات SMTP
-SMTP_SERVER=smtp.mail.yahoo.com
+SMTP_SERVER=smtp.yahoo.com
 SMTP_PORT=587
 
-# مفتاح الأمان للتطبيق
-SECRET_KEY=velio-store-secret-key-456075815a06f036
-
-# إعدادات قاعدة البيانات
-DATABASE_URL=sqlite:///instance/products.db
+# مفتاح الأمان
+SECRET_KEY=your-secret-key-here
