--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: web-app
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: python app.py
+    startCommand: python3 app.py
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
@@ -26,6 +26,11 @@ services:
         value: smtp.mail.yahoo.com
       - key: SMTP_PORT
         value: 587
+      # إعدادات HTTPS
+      - key: USE_SSL
+        value: "true"
+      - key: SESSION_COOKIE_SECURE
+        value: "true"
     healthCheckPath: /
     plan: free
 
@@ -33,7 +38,7 @@ services:
     name: admin-app
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: python admin_app.py
+    startCommand: python3 admin_app.py
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.0
@@ -56,6 +61,11 @@ services:
         value: smtp.mail.yahoo.com
       - key: SMTP_PORT
         value: 587
+      # إعدادات HTTPS
+      - key: USE_SSL
+        value: "true"
+      - key: SESSION_COOKIE_SECURE
+        value: "true"
     healthCheckPath: /admin
     plan: free
 
